- Route editor preview evaluation inputs through WorkflowEvaluationInputsFacade
Seeding `vars` into Job.inputs covers real runs, but the editor's preview paths never create a job: each
one built its evaluation context by calling getWorkflowTestConfigurationInputs directly and concatenating
the result with previous-node sample outputs. Eight call sites did this independently -- dynamic
properties, options, descriptions, outputs, sample outputs, parameters, scripts and trigger tests -- so
`${vars.NAME}` resolved at runtime and rendered as an unresolved literal in every preview.

WorkflowEvaluationInputsFacade replaces that call with a single seam that returns the inputs half of the
evaluation context: the test-configuration inputs plus, when the EE resolver is present, the `vars`
snapshot -- the same shape a real job's inputs have. Every preview facade and WebhookTriggerTestFacadeImpl
now go through it, which makes it the ONE place that knows how variables reach previews, and the one place
a future context addition has to be made.

The rule this establishes is worth stating plainly, because violating it is silent: a preview facade must
never call getWorkflowTestConfigurationInputs directly again -- doing so compiles, works for every
expression that does not mention a variable, and quietly drops `vars`.